@@ -880,12 +880,12 @@ ladderlog_write_new_match_help                Write to ladderlog: NEW_MATCH <dat
 ladderlog_write_new_round_help                Write to ladderlog: NEW_ROUND <date and time>
 ladderlog_write_new_warmup_help               Write to ladderlog: NEW_WARMUP <n> <date and time>. <n> is the number of matches to be played consecutively.
 ladderlog_write_num_humans_help               Write to ladderlog: NUM_HUMANS <number of humans>
-ladderlog_write_online_player_help            Write to ladderlog: ONLINE_PLAYER <name> [<ping> <team> <access level>]
+ladderlog_write_online_player_help            Write to ladderlog: ONLINE_PLAYER <name> <ping> <team> <access level> <aggregate score>
+ladderlog_write_online_team_help              Write to ladderlog: ONLINE_TEAM <name> <aggregate score>
 ladderlog_write_player_entered_help           Write to ladderlog: PLAYER_ENTERED <name> <IP> <screen name>
 ladderlog_write_player_left_help              Write to ladderlog: PLAYER_LEFT <name> <IP>
 ladderlog_write_player_renamed_help           Write to ladderlog: PLAYER_RENAMED <old name> <new name> <ip> <screen name>
 ladderlog_write_player_respawn_help           Write to ladderlog: PLAYER_RESPAWN <respawnee> <respawnee's team> [respawner]
-ladderlog_write_positions_help                Write to ladderlog: POSITIONS <team> <player1 player2 ...>
 ladderlog_write_round_score_help              Write to ladderlog: ROUND_SCORE <score difference> <player> [<team>]
 ladderlog_write_round_score_team_help         Write to ladderlog: ROUND_SCORE_TEAM <score difference> <team>
 ladderlog_write_round_winner_help             Write to ladderlog: ROUND_WINNER <team> <players>
